plugins/waveglider/WgCtdLayer: Clean URL construction future deprecation.